# miniScene

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: Ubuntu.yml  Windows.yml
apps/: CMakeLists.txt  merge.cpp  miniReplicate.cpp
apps/viewer/: deviceCode.cu  deviceCode.h  viewer.cpp
cmake/: configure_build_type.cmake
importers/: CMakeLists.txt  DGEF.cpp  DGEF.h  bakeOutPtex.cpp  binmesh2mini.cpp  bobj2mini.cpp  happly.h  importOBJ.cpp  importOBJ.h  lavai32f32toMini.cpp  mini2binmesh.cpp  obj2mini.cpp  pbf2mini.cpp  ply2mini.cpp  stl2mini.cpp  xmlbin2mini.cpp
importers/cup_tools/: cup.h  tessellateCurves.h  worldBounds.h
miniScene/: CMakeLists.txt  IO.h  LocalScene.cpp  LocalScene.h  Material.h  MergedMesh.h  PartsFile.cpp  PartsFile.h  Scene.cpp  Scene.h  Serialized.cpp  Serialized.h  SimplifiedPBRTScene.h  SplitSpecs.cpp  SplitSpecs.h  Texture.h  common.h  info.cpp  mini2obj.cpp  miniReplicate.cpp  separateRootMeshes.cpp
miniScene/common/: owl-common.h
miniScene/common/math/: AffineSpace.h  LinearSpace.h  Quaternion.h  box.h  constants.h  vec.h
miniScene/common/math/vec/: compare.h  functors.h  rotate.h
miniScene/common/parallel/: parallel_for.h
miniScene/common/stb_image/stb/: stb_image.h  stb_image_write.h
miniScene/importers/: CMakeLists.txt  bakeOutPtex.cpp  obj2mini.cpp  ply2mini.cpp
miniScene/importers/cup_tools/: Lights.cpp  Lights.h  cup.h  removeAllNonMeshShapes.cpp  removeAllNonMeshShapes.h  tessellateCurves.cpp  worldBounds.cpp
miniScene/viewer/: CMakeLists.txt  deviceCode.cu  viewer.cpp
pyminiScene/: CMakeLists.txt  pyscene.cpp
tools/: CMakeLists.txt  addEnvLight.cpp  breakLargeMeshes.cpp  dumpBBs.cpp  exportBBs.cpp  exportIndividualInstances.cpp  exportMini.cpp  genScaleTest.cpp  importMini.cpp  info.cpp  lint.cpp  makeBox.cpp  merge.cpp  mini2binmesh.cpp  mini2dgef.cpp  mini2hsmesh.cpp  mini2obj.cpp  miniReplicate.cpp  separateRootMeshes.cpp  subdivide.cpp
tools/viewer/: deviceCode.cu  viewer.cpp
